# ska-ser-headlamp-plugins

./: .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  .release  CHANGELOG.md  Dockerfile  Makefile  README.md  pyproject.toml
docs/src/: conf.py  index.rst
images/ska-ser-headlamp-local/: Dockerfile
images/ska-ser-headlamp-plugins/: Dockerfile
scripts/: copy-plugins.sh  install-plugins.sh
src/: README.md  flux
src/ska-helm-release/: README.md  package-lock.json  package.json
src/ska-helm-release/src/: config.tsx  dependency.tsx  icons.tsx  index.tsx  nexus.tsx  request.tsx  section.tsx  utils.tsx
src/ska-logo/: README.md  package-lock.json  package.json
src/ska-logo/src/: index.tsx
src/ska-organization/: README.md  package-lock.json  package.json
src/ska-organization/src/: icons.tsx  index.tsx  namespaceList.tsx  organization.tsx  organizationDetail.tsx  organizationList.tsx  projectsList.tsx  teamsList.tsx  usersList.tsx  utils.tsx
src/ska-owner-metadata/: README.md  package-lock.json  package.json
src/ska-owner-metadata/src/: actions.tsx  config.tsx  details.tsx  index.tsx  section.tsx  utils.tsx
src/ska-prometheus/: README.md  package-lock.json  package.json
src/ska-prometheus/src/: chart.tsx  common.tsx  config.tsx  index.tsx  request.tsx  util.ts
src/ska-resource-links/: package-lock.json  package.json
src/ska-resources-links/: README.md  package-lock.json  package.json
src/ska-sidebar/: .gitignore  README.md  package-lock.json  package.json
src/ska-tango/: .eslintrc  package-lock.json  package.json
(+40 files in other folders)
